--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <div class="arena-chat" data-publisher="ske-tch" data-chatroom="VSCI1IW" data-position="in-page"></div><script async src="https://go.arena.im/public/js/arenachatlib.js?p=ske-tch&e=VSCI1IW"></script>
+<title>Chat</title>
